[CHUI-11] updating document title based on route

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -8,6 +8,7 @@
   "created"            : "Created",
   "created_by"         : "Created By",
   "create_game"        : "Create Game",
+  "dashboard"          : "Dashboard",
   "date_created"       : "Date Created",
   "delete_game"        : "Delete Game",
   "delete_round"       : "Delete Round",
