[CHUI-8] generating lots of breakpoint/responsive classes
save

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -15,6 +15,7 @@
   "displaying"         : "Displaying",
   "displaying_x_of_y"  : "Displaying {{x}} of {{y}} results",
   "end_game"           : "End Game",
+  "game"               : "Game",
   "game_id"            : "Game ID",
   "home"               : "Home",
   "leaderboard"        : "Leaderboard",
