[CHUI-13] user signup w/o google - direct auth

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -14,6 +14,7 @@
   "delete_round"       : "Delete Round",
   "displaying"         : "Displaying",
   "displaying_x_of_y"  : "Displaying {{x}} of {{y}} results",
+  "email"              : "Email",
   "end_game"           : "End Game",
   "game"               : "Game",
   "game_id"            : "Game ID",
@@ -40,6 +41,7 @@
   "no_results"         : "No Results",
   "no_rounds"          : "No Rounds",
   "of_x"               : "of {{x}} results",
+  "password"           : "Password",
   "previous"           : "Previous",
   "price"              : "Price",
   "refresh"            : "Refresh",
@@ -47,10 +49,12 @@
   "round_no"           : "Round",
   "search"             : "Search",
   "search_users"       : "Search Users",
+  "sign_up"            : "Create Account",
   "shop"               : "Shop",
   "source_code"        : "Source Code",
   "start_game"         : "Start game",
   "status"             : "Status",
+  "submit"             : "Submit",
   "thumbnail"          : "Thumbnail",
   "title"              : "Title",
   "unknown"            : "Unknown",
