[CHUI-21] adding username to signup form

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -60,6 +60,7 @@
   "title"              : "Title",
   "unknown"            : "Unknown",
   "unknown_error"      : "Unknown Error",
+  "username"           : "Username",
   "user_id"            : "User ID",
   "view_game"          : "View Game",
   "welcome_name"       : "Welcome, {{name}}",
