[CHUI-18] displaying message for games having less than 3 users

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -35,6 +35,7 @@
   "login"              : "Sign In",
   "login_with_google"  : "Sign in with google",
   "logout"             : "Logout",
+  "lonely_game"        : "Its awfully lonely in here! In order to have a good game you're going to wanna find at least 2 other kick ass buddies. Invite them below!",
   "name"               : "Name",
   "new_round"          : "New Round",
   "next"               : "Next",
