[CHUI-34] restricting games#single actions per status/pop

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "aborted_game"       : "This game was ended w/o  any rounds or users",
   "about"              : "About",
   "add_player"         : "Add Player",
   "already_added"      : "Already Added",
