[CHUI-40] finishing initial pass at account management component

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -4,6 +4,7 @@
   "account"            : "Account",
   "add_player"         : "Add Player",
   "already_added"      : "Already Added",
+  "cancel"             : "Cancel",
   "categories"         : "Categories",
   "charcoal"           : "Charcoal",
   "clear_round"        : "Clear Round",
