[CHUI-11] game status filtering on game membership table

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -2,7 +2,9 @@
   "aborted_game"       : "This game was ended w/o  any rounds or users",
   "about"              : "About",
   "account"            : "Account",
+  "active"             : "Active",
   "add_player"         : "Add Player",
+  "all"                : "All",
   "already_added"      : "Already Added",
   "cancel"             : "Cancel",
   "categories"         : "Categories",
@@ -20,6 +22,7 @@
   "displaying_x_of_y"  : "Displaying {{x}} of {{y}} results",
   "email"              : "Email",
   "end_game"           : "End Game",
+  "ended"              : "Ended",
   "full_name"          : "Full Name",
   "game"               : "Game",
   "game_id"            : "Game ID",
