--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,1 +1,6 @@
+account: "Account"
+charcoal: "Charcoal"
+google_login: "Sign in with Google"
+login: "Login"
 not_found: "not found"
+sign_out: "Sign Out"
