[CHUI-56] i18n templating + evented utility
Save

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ charcoal: "Charcoal"
 google_login: "Sign in with Google"
 home: "Home"
 login: "Login"
-not_found: "not found"
+page_not_found: "The page you're looking for does not exist."
 sign_out: "Sign Out"
 welcome_x: "Welcome, {{0}}"
+your_games: "Your Games"
