[CHUI-56] starting work on dashboard game table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,12 @@
 account: "Account"
 charcoal: "Charcoal"
+created_by: "Created By"
 google_login: "Sign in with Google"
 home: "Home"
 login: "Login"
 page_not_found: "The page you're looking for does not exist."
 sign_out: "Sign Out"
+start_date: "Started"
+status: "Status"
 welcome_x: "Welcome, {{0}}"
 your_games: "Your Games"
