[CHUI-56] menu styles + resource tests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,10 +3,15 @@ charcoal: "Charcoal"
 created_by: "Created By"
 google_login: "Sign in with Google"
 home: "Home"
+id: "ID"
 login: "Login"
+new_game: "New Game"
+no_results: "No Results"
 page_not_found: "The page you're looking for does not exist."
 sign_out: "Sign Out"
+something_went_wrong: "Something went wrong"
 start_date: "Started"
 status: "Status"
+view_game: "View Game"
 welcome_x: "Welcome, {{0}}"
 your_games: "Your Games"
