[CHUI-56] lotsof work on game related functionality

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,16 +1,30 @@
 account: "Account"
+add: "Add"
+add_players: "Add Players"
+already_member: "Already Invited"
+assholes: "Assholes"
 charcoal: "Charcoal"
 created_by: "Created By"
 google_login: "Sign in with Google"
 home: "Home"
 id: "ID"
+invite_players: "Invite Players"
 login: "Login"
+low_game_population: "Not enough users, invite some more to begin the game"
+name: "Name"
 new_game: "New Game"
+new_round: "New Round"
 no_results: "No Results"
+no_rounds: "No rounds for this game yet"
 page_not_found: "The page you're looking for does not exist."
+presidencies: "Presidencies"
+vice_presidencies: "VPs"
+round: "Round"
 sign_out: "Sign Out"
 something_went_wrong: "Something went wrong"
 start_date: "Started"
+username: "Username"
+user_id: "User ID"
 status: "Status"
 view_game: "View Game"
 welcome_x: "Welcome, {{0}}"
