[CHUI-56] more updates

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,7 +19,9 @@ no_rounds: "No rounds for this game yet"
 page_not_found: "The page you're looking for does not exist."
 presidencies: "Presidencies"
 vice_presidencies: "VPs"
+results: "Results"
 round: "Round"
+round_no: "No."
 sign_out: "Sign Out"
 something_went_wrong: "Something went wrong"
 start_date: "Started"
