[CHUI-46] [skip ci]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@ account: "Account"
 add: "Add"
 add_players: "Add Players"
 already_member: "Already Invited"
+asshole: "Asshole"
 assholes: "Assholes"
 charcoal: "Charcoal"
 created_by: "Created By"
@@ -17,11 +18,15 @@ new_round: "New Round"
 no_results: "No Results"
 no_rounds: "No rounds for this game yet"
 page_not_found: "The page you're looking for does not exist."
+president: "President"
 presidencies: "Presidencies"
+vice_president: "VPs"
 vice_presidencies: "VPs"
 results: "Results"
 round: "Round"
 round_no: "No."
+select_user: "Select User"
+select_x: "Select {{0}}"
 sign_out: "Sign Out"
 something_went_wrong: "Something went wrong"
 start_date: "Started"
