[CHUI-46] [skip ci]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,7 @@ id: "ID"
 invite_players: "Invite Players"
 login: "Login"
 low_game_population: "Not enough users, invite some more to begin the game"
+members: "Members"
 name: "Name"
 new_game: "New Game"
 new_round: "New Round"
